# RSA-from-scratch

./: .gitignore  RSA.py  main.py  pyproject.toml
attacks/: fermat.py  wiener.py
examples/: file.txt
interfaces/: __init__.py  attacker.py  key_generator.py  mod_inverse.py  number_generator.py  prime.py
keygen/: key_generator.py
keys/: __init__.py
numgen/: number_generator.py
prime_checkers/: __init__.py  ferma.py  fermat.py  initial_check.py  miller_rabin.py  solovay_strassen.py
tests/: attackers.py  encryption.py  numgen.py  prime_tester.py  symbol_calc.py
utils/: gcd.py  key_generator.py  mod_inverser.py  newton_sq_root.py  number_generator.py  symbol_calculator.py
