[tool.poetry]
name = "rsa"
version = "0.1.0"
description = "RSA implementation with attackers to test keys"
authors = ["Denis <git@github.com:fookashi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "main.py"